<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/today_page"
            android:textSize="28sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/todayItem" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <com.robinhood.ticker.TickerView
            android:text="0"
            android:textSize="50sp"
            android:textColor="@color/colorAccent"
            android:id="@+id/todayPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/todayItem" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/page_digit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pageDigit"
            app:layout_constraintStart_toEndOf="@+id/todayPages"
            android:layout_marginLeft="1dp" android:layout_marginStart="1dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.044" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/todayPages"/>
    <TextView
            android:text="@string/sum_of_pages_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sumAllRestPages" app:layout_constraintStart_toEndOf="@+id/pageDigit"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:textSize="20sp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/todayPages"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/updateTodayPages" android:src="@android:drawable/ic_menu_rotate"
            android:background="@null"
            app:layout_constraintStart_toEndOf="@+id/sumAllRestPages" android:layout_marginLeft="16dp"
            android:tint="@color/colorPrimary"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/todayPages"/>
    <TextView
            android:text="@string/add_book"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addBookItem" app:layout_constraintStart_toStartOf="@+id/todayItem"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/todayPages"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:id="@+id/bookImage"
            app:layout_constraintBottom_toBottomOf="@+id/editDeadline"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/addBookItem"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.5" app:layout_constraintStart_toStartOf="@+id/addBookItem"
    />
    <TextView
            android:text="@string/title"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleItem"
            app:layout_constraintStart_toStartOf="@+id/editName"
            app:layout_constraintTop_toBottomOf="@+id/addBookItem"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_book_name"
            android:ems="10"
            android:id="@+id/editName"
            app:layout_constraintTop_toBottomOf="@+id/titleItem"
            app:layout_constraintHorizontal_bias="0.2"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" app:layout_constraintStart_toEndOf="@+id/bookImage"/>
    <TextView
            android:text="@string/page"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pageItem" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/editName"
            app:layout_constraintStart_toStartOf="@+id/editPages"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_book_pages"
            android:ems="10"
            android:id="@+id/editPages"
            app:layout_constraintTop_toBottomOf="@+id/pageItem"
            app:layout_constraintHorizontal_bias="0.2"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/bookImage" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"/>
    <TextView
            android:text="@string/deadline"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deadlineItem" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/editPages"
            app:layout_constraintStart_toStartOf="@+id/editDeadline"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/hint_book_deadline"
            android:ems="10"
            android:id="@+id/editDeadline"
            app:layout_constraintTop_toBottomOf="@+id/deadlineItem"
            app:layout_constraintHorizontal_bias="0.2"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bookImage" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:src="@android:drawable/ic_menu_camera"
            android:tint="@color/colorPrimary" android:background="@null"
            android:id="@+id/scanButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/titleItem" app:layout_constraintStart_toEndOf="@+id/editName"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addButton"
            app:layout_constraintStart_toStartOf="@+id/scanButton"
            app:layout_constraintBottom_toBottomOf="@+id/editDeadline"/>
    <TextView
            android:text="@string/read_book"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/read_item" app:layout_constraintStart_toStartOf="@+id/addBookItem"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/editDeadline"/>
    <Spinner
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toBottomOf="@+id/read_item"/>
    <TextView
            android:text="@string/already_read_pages_default" android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="1"
            android:id="@+id/alreadyReadPages" app:layout_constraintEnd_toStartOf="@+id/selectedPages"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintBottom_toTopOf="@+id/selectedDeadline" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="2dp" android:layout_marginEnd="2dp"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/selectedPages" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintBottom_toTopOf="@+id/selectedDeadline"
            app:layout_constraintStart_toStartOf="@+id/selectedDeadline"
            app:layout_constraintEnd_toEndOf="@+id/selectedDeadline"/>
    <TextView
            android:text="@string/sum_of_pages_default" android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectedSumPages" app:layout_constraintEnd_toStartOf="@+id/updatePageButton"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/selectedPages"
            android:layout_marginLeft="2dp" android:layout_marginStart="2dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/selectedDeadline" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            android:layout_marginRight="8dp" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/updatePageButton" app:layout_constraintStart_toEndOf="@+id/selectedSumPages"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/selectedDeadline"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/selectedDeadline" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/selectedPages" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
    />
</android.support.constraint.ConstraintLayout>